--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,7 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    'App\Doctrine\FilterRecipeQueryExtension':
+    App\Doctrine\FilterRecipeQueryExtension:
         tags:
             - { name: api_platform.doctrine.orm.query_extension.collection }
             - { name: api_platform.doctrine.orm.query_extension.item }
