--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/flex": "^2",
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/maker-bundle": "^1.38",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
@@ -68,7 +69,7 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
+            "cache:clear": "-e prod --no-debug",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
@@ -88,7 +89,6 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.37",
         "symfony/stopwatch": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.14"
