--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "-e prod --no-debug",
+            "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
