--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/translation": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
         "symfony/validator": "6.0.*",
+        "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "6.0.*"
     },
     "config": {
@@ -90,7 +91,6 @@
     },
     "require-dev": {
         "symfony/stopwatch": "6.0.*",
-        "symfony/web-profiler-bundle": "6.0.*",
-        "symfony/webpack-encore-bundle": "^1.14"
+        "symfony/web-profiler-bundle": "6.0.*"
     }
 }
