--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "heroku-postbuild": "encore production --progress"
     },
     "dependencies": {
         "react-bootstrap": "^2.1.2"
+    },
+    "engines": {
+        "node": "14.14.0",
+        "npm" : "6.x"
     }
 }
