--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.0.0",
-        "@symfony/webpack-encore": "^1.7.0",
         "bootstrap": "^5.1.3",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
@@ -14,14 +13,11 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress",
-        "heroku-postbuild": "encore production --progress"
+        "build": "encore production --progress"
+   
     },
     "dependencies": {
         "react-bootstrap": "^2.1.2"
-    },
-    "engines": {
-        "node": "14.14.0",
-        "npm" : "6.x"
     }
+
 }
