CORS for client

--- a/.env
+++ b/.env
@@ -31,7 +31,8 @@ DATABASE_URL=mysql://s0vs4beds77m9csc:la55wralo33nz3t4@i54jns50s3z6gbjt.chr7pe7i
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+### CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https?://nutrition-jp.herokuapp.com?$'
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
