--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 
 ###< symfony/framework-bundle ###
 
@@ -32,7 +32,8 @@ DATABASE_URL=mysql://s0vs4beds77m9csc:la55wralo33nz3t4@i54jns50s3z6gbjt.chr7pe7i
 
 ###> nelmio/cors-bundle ###
 ### CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
-CORS_ALLOW_ORIGIN='^https?://nutrition-jp.herokuapp.com?$'
+CORS_ALLOW_ORIGIN='*'
+###CORS_ALLOW_ORIGIN='^https?://nutrition-jp.herokuapp.com?$'
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
